--- a/src/main/resources/assets/pandoras_creatures/lang/it_it.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/it_it.json
@@ -1,11 +1,75 @@
+// Notes for translators, please read before starting.
+//
+// If you read this thank you for considering localising Pandoras Creatures.
+// Before you start consider messaging me (mod author) or one of my Discord moderators,
+// so you can get the Translator Role and have acces to the newest lang file.
+// This lang file will often have localisations for the next version of the mod,
+// that contains content that has not been released yet.
+//
+// When the localisation file is done send it to me, preferably in the discord channel made
+// for it, or by sending me a direct message.
+//
+// If you want a name other then your Discord name to be inside the credits, let me know.
+//
+// 					  <#########> Localising Tools <#########>
+//
+// By putting \n in the text the mod will split the text at that position, when spliting text
+// keep in mind that you have to add a color code again, if you used one in the line before
+// (see color codes bellow), as its a new line and the color will reset itself to default.
+//
+// The following color codes can be added to the start of text to color it:
+//
+// #c0 Black
+// #c1 Dark Blue
+// #c2 Dark Green
+// #c3 Dark Aqua
+// #c4 Dark Red
+// #c5 Dark Purple
+// #c6 Gold
+// #c7 Gray
+// #c8 Dark Gray
+// #c9 Blue
+// #ca Green
+// #cb Aqua
+// #cc Red
+// #cd Light Purple
+// #ce Yellow
+// #cf White
+//
+// The following color codes can be added to the start of text to apply some effects:
+//
+// #cl Bold
+// #cm Strikethrough
+// #cn Underline
+// #co Italic
+// #cr Reset the default color
+//
+// Feel free to add or remove new lines, in order to make the text look good in the language youre working on.
+// You should use a text editor that has JSON formating in order to avoid invalid files.
+// The text %s will be replace with text. Example: "Author: %s" could become "Author: andrew0030".  
+// The text %d will be replace with a number. Example: "Radius: %d*%d*%d" could become "Radius: 3*3*3"
+//
+// IMPORTANT: The [Localising Tools] will only work on the Item Tooltips Category, as the ingame chat splits
+// lines on its own when needed, and the colors are not ment to be changed!
+//
+// That's all have "fun" translating!
+
 {
+//	 Item Groups
 	"itemGroup.pandoras_creatures": "Pandoras Creatures",
 
+//	 Spawn Eggs
 	"item.pandoras_creatures.arachnon_spawn_egg": "Uovo di spawn Arachnon",
 	"item.pandoras_creatures.hellhound_spawn_egg": "Uovo di spawn Hellhound",
 	"item.pandoras_creatures.crab_spawn_egg": "Uovo di spawn Granchio",
-	"item.pandoras_creatures.seahorse_spawn_egg": "Uovo di spawn Cavallucio Marino",
+	"item.pandoras_creatures.seahorse_spawn_egg": "Uovo di spawn Cavallucio marino",
+	"item.pandoras_creatures.acidic_archvine_spawn_egg": "Uovo di spawn Archvine Acida",
 	
+//	 Item Tooltips, [Localising Tools] can be used here.
+	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Deve essere piazzatta sotto le \n#c7foglie di Giungla o la Netherrack",
+	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7Questo strumento rompe\n#c7i blocchi in un'area 3x3",
+	
+//	 Items
 	"item.pandoras_creatures.arachnon_crystal": "Cristallo di Arachnon",
 	"item.pandoras_creatures.arachnon_hammer": "Martello di Arachnon",
 	"item.pandoras_creatures.crab_meat": "Carne di Granchio",
@@ -13,13 +77,24 @@
 	"item.pandoras_creatures.crab_bucket": "Secchiello con Granchio",
 	"item.pandoras_creatures.seahorse_bucket": "Secchiello con Cavallucio Marino",
 	"item.pandoras_creatures.seahorse": "Cavalluccio Marino Crudo",
-	"item.pandoras_creatures.seahorse_cooked": "Cavalluccio Carino Cotto",
+	"item.pandoras_creatures.seahorse_cooked": "Cavalluccio Marino Cotto",
+	"item.pandoras_creatures.acidic_archvine_tongue": "Lingua di Archvine Acida",
 	
+//	 Entities
 	"entity.pandoras_creatures.arachnon": "Arachnon",
 	"entity.pandoras_creatures.hellhound": "Hellhound",
 	"entity.pandoras_creatures.crab": "Granchio",
 	"entity.pandoras_creatures.seahorse": "Cavallucio Marino",
+	"entity.pandoras_creatures.acidic_archvine": "Archvine Acida",
 	
+//	 Button Tool Tips
+	"gui.button.pandoras_creatures.discord": "Discord",
+	"gui.button.pandoras_creatures.curseforge": "CurseForge",
+	"gui.button.pandoras_creatures.youtube": "YouTube",
+	"gui.button.pandoras_creatures.twitch": "Twitch",
+	"gui.button.pandoras_creatures.patreon": "Patreon",
+	
+//	 Chat Messages
 	"chat.pandoras_creatures.invalidJarDownload": "[qui]",
 	"chat.pandoras_creatures.invalidJarDownloadTooltip": "Premi per aprire la pagina del download.",
 	"chat.pandoras_creatures.invalidJarStopModReposts": "[qui]",
@@ -28,16 +103,20 @@
 	"chat.pandoras_creatures.newVersionDownload": "[qui]",
 	"chat.pandoras_creatures.newVersionDownloadTooltip": "Premi per aprire la pagina di download ufficiale.",
 	"chat.pandoras_creatures.newVersion": "C'è una nuova versione di Pandoras Creatures disponibile. Per favore premi %s per apire la pagina di download ufficiale.",
+	"chat.pandoras_creatures.failedCheck": "Pandoras Creatures non può verificare se ci sono nuove versioni disponibili.",
 	
+//	 Crab Types
 	"chat.pandoras_creatures.crabBucketTooltip.sea": "Granchio di mare",
 	"chat.pandoras_creatures.crabBucketTooltip.tropical": "Granchio tropicale",
 	
+//	Seahorse Sizes
 	"chat.pandoras_creatures.seahorseBucketTooltip.verySmall": "Dimensione: Molto Piccolo",
 	"chat.pandoras_creatures.seahorseBucketTooltip.small": "Dimensione: Piccolo",
 	"chat.pandoras_creatures.seahorseBucketTooltip.normal": "Dimensione: Normale",
 	"chat.pandoras_creatures.seahorseBucketTooltip.big": "Dimensione: Grande",
 	"chat.pandoras_creatures.seahorseBucketTooltip.veryBig": "Dimensione: Molto Grande",
 	
+// 	Seahorse Types
 	"chat.pandoras_creatures.seahorseBucketTooltip.orange": "Cavalluccio marino arancione",
 	"chat.pandoras_creatures.seahorseBucketTooltip.green": "Cavallucio marino verde",	
 	"chat.pandoras_creatures.seahorseBucketTooltip.red": "Cavalluccio marino rosso",
