More Bufflon Stuff
Added walk animation, started working on Inventory system for Bufflons, Added basic saddle system, Made Bufflons ridable and set passenger offset, Added new Bufflon variant.

--- a/src/main/resources/assets/pandoras_creatures/lang/en_us.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/en_us.json
@@ -80,6 +80,7 @@
 	"item.pandoras_creatures.seahorse_cooked": "Cooked Seahorse",
 	"item.pandoras_creatures.acidic_archvine_tongue": "Acidic Archvine Tongue",
 	"item.pandoras_creatures.herb_bundle": "Herb Bundle",
+	"item.pandoras_creatures.bufflon_saddle": "Bufflon Saddle",
 	
 //	 Blocks
 	"block.pandoras_creatures.arachnon_crystal": "Arachnon Crystal",
