Almost finished Bufflon Entity
Finished most of the bufflon combat AI, things left to do is balancing the combat ai and the bufflon stats, and a few features in addition to thew bufflon entity

--- a/src/main/resources/assets/pandoras_creatures/lang/en_us.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/en_us.json
@@ -108,6 +108,11 @@
 	"gui.button.pandoras_creatures.youtube": "YouTube",
 	"gui.button.pandoras_creatures.twitch": "Twitch",
 	"gui.button.pandoras_creatures.patreon": "Patreon",
+	"gui.button.pandoras_creatures.bufflon.sit": "Sit",
+	"gui.button.pandoras_creatures.bufflon.follow": "Follow",
+	"gui.button.pandoras_creatures.bufflon.move_freely": "Move Freely",
+	"gui.button.pandoras_creatures.bufflon.combat": "Combat Mode",
+	"gui.button.pandoras_creatures.bufflon.peaceful": "Peaceful Mode",
 	
 //	 Chat Messages
 	"chat.pandoras_creatures.invalidJarDownload": "[here]",
